# BEFA-Library

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  bfd.h  main.cpp
CMAKE_INCLUDES/: CodeCoverage.cmake
bfp/: CMakeLists.txt  asm.cpp  bfd.cpp  bfp.cpp  bfp.hpp  exception.cpp  exception.hpp  file.cpp  instruction.cpp  parser.cpp  plugin_manager.cpp  plugin_manager.hpp  section.cpp  stream.cpp  symbol.cpp
doc/: CMakeLists.txt
dox_configs/: CMakeLists.txt  config_html.dox  config_man.dox
examples/: CMakeLists.txt
examples/DebugInfo/: CMakeLists.txt  main.cpp
examples/Disassembler/: CMakeLists.txt  main.cpp
examples/MallocCalls/: CMakeLists.txt  main.cpp
examples/MallocCalls/malloc/: CMakeLists.txt  main.cpp
examples/SymbolReader/: CMakeLists.txt  main.cpp
examples/TestProgram/: CMakeLists.txt  main.cpp
examples/disassembler/: CMakeLists.txt  disassembler.cpp
include/: CMakeLists.txt  befa.hpp  bfp.hpp
include/befa/assembly/: asm_arg_parser.hpp  basic_block.hpp  instruction.hpp  instruction_decoder.hpp  instruction_parser.hpp  section.hpp  symbol.hpp
include/befa/llvm/: assignment.hpp  basic_block.hpp  binary_operation.hpp  call.hpp  cmp.hpp  decompiler.hpp  function.hpp  instruction.hpp  jmp.hpp  mapper.hpp  unary.hpp  unary_instruction.hpp
include/befa/utils/: algorithms.hpp  assert.hpp  backward.hpp  bucket_allocator.hpp  byte_array_view.hpp  factory.hpp  observer.hpp  range.hpp  types.hpp  visitor.hpp
include/bfp/: CMakeLists.txt  asm.hpp  bfd.hpp  bfp.hpp  exception.h  exception.hpp  file.hpp  instruction.hpp  iterator.hpp  iterator.tpp  line_info.hpp  parser.hpp  plugin_manager.hpp  raw_vector.hpp  section.hpp  stream.hpp  support.hpp  support.tpp  support_helpers.tpp  symbol.hpp
src/: CMakeLists.txt
src/assembly/: decoder.cpp  disassembler.cpp  executable_file.cpp
src/llvm/: decompiler.cpp
test/: CMakeLists.txt
tests/: CMakeLists.txt  allocator.cpp  base.cpp  decoder.cpp  decompiler.cpp  disassembler.cpp  executable.cpp  file.cpp  fixtures.hpp  main.cpp  observer.cpp  section.cpp  supp_functions.cpp  support.hpp  symbol.cpp  test1.cpp  test2.cpp  visitor.cpp
tests/Functional/: main.cpp  main.h  tests.hpp
tests/Plugin/: main.cpp  main.h
tests/PluginTest/: plugin_test.cpp
tests/PluginTestProgram/: main.cpp
tests/SampleTest1/: test1.cpp
tests/SampleTest2/: test2.cpp
tests/TestProgram/: main.cpp
tests/TestProgramFail/: main.cpp
tests/c_prog/: CMakeLists.txt  sample.c
tests/plugin/: sample.cpp  sample.h
tests/test_cases/: CMakeLists.txt
tests/test_cases/global_function/: CMakeLists.txt  global_function.c
tests/test_cases/simple/: CMakeLists.txt  simple.c
travis/: install.sh  post_script.sh  script.sh
